# NBP-Comfyui

./: PRD_Updated.md  README.md  UPGRADE_v1_to_v2_NanoBanana_Nodes.md  __init__.py  client_manager.py  error_handlers.py  implementation_plan.md  nodes.py  pyproject.toml  requirements.txt  response_parsers.py  tasks.md  type_converters.py
js/: nano_banana_dynamic.js
